updating to latest

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import "variables.scss";
 
+.full-width {width:100%;}
+
 // Alter top navigation styles
 
 .tab-bar {
@@ -22,41 +24,60 @@
   }
 }
 
-
-
 .hero {
   position: relative;
-  background-image:url('../images/hero_01.png');
+  //background-image:url('../images/hero_01.png');
+  background-image:url('../images/martial-arts-hero.jpg');
   background-repeat: no-repeat;
-  background-position: center top;
-  height:18rem;
-  .overlay-text {
-    position: relative;
-    top: 3rem;
-    margin-left: 2rem;
+  background-position: center -10rem;
+  background-size: inherit;
+  background-color: $grey;
+  height:35rem;
+  .overlay-text p {
+    //position: relative;
+    //top: 3rem;
+    //margin-right: 2rem;
     padding: .75rem;
-    margin-right: 2rem;
     background-color: rgba(255,255,255,0.4);
   }
   .button-container {
-    position:relative;
-    top:5rem;
+    //position:relative;
+    //top:5rem;
     text-align:center;
   }
   .button {
   }
 }
 
+.chinese-symbol {
+  position:absolute;
+  top:10%;
+  left:1.65rem;
+  background-image:url('../images/chinese-symbols.svg');
+  background-repeat: no-repeat;
+  background-size:70%;
+  display: block;
+  width: 188px;
+  height: 42px;
+  z-index: 25;
+}
+
+.wing-chun .chinese-symbol {background-position:0 0;}
+.tong-bei .chinese-symbol {background-position:0px -42px;}
+.tai-chi .chinese-symbol {background-position:0 -84px;}
 
 .services {
+  @include gradient_dark();
+  background-color: $black;
   ul {
     @include blank_list();
-    text-align: center;
+    text-align: left;
     li {
-      padding:0;
+      position:relative;
+      padding:4.5rem 1rem 1rem 1rem;
       @include gradient_dark();
       background-color: $black;
-      height:10rem;
+      height:15rem;
       border-bottom:2px solid #9B9B9B;
     }
     a {
@@ -70,7 +91,78 @@
     }
   }
 }
-
 .about {
   margin-top:2rem;
 }
+
+#footer {
+  background-color: $black;
+  color: $white;
+  min-height:4rem;
+  padding-top:1rem;
+}
+
+// Small screens
+@media only screen {
+  .hero {
+    background-position: center 0rem;
+  }
+  .overlay-text, .button-container {top:5rem;}
+  .services {
+    ul {
+      @include blank_list();
+      text-align: center;
+      li {
+        padding:0;
+        background-color: $black;
+        height:9rem;
+        border-bottom:2px solid #9B9B9B;
+      }
+    }
+  }
+}
+
+// Medium screens
+@media only screen and (min-width: 40.063em) {
+  .hero {
+    background-position: center -6rem;
+  }
+  .chinese-symbol {
+    top:10%;
+    left:42%;
+    background-size:70%;
+  }
+  .services {
+    ul {
+      li {
+        padding:3.5rem 1rem 1rem 1rem;
+        height:10rem;
+        border-bottom:2px solid #9B9B9B;
+      }
+    }
+  }
+} /* min-width 641px, medium screens */
+
+// Large screens
+@media only screen and (min-width: 64.063em) {
+  .hero {
+    background-position: center -7rem;
+  }
+  .overlay-text, .button-container {top:12.5rem;}
+  .chinese-symbol {
+    top:10%;
+    left:1.65rem;
+  }
+  .services {
+    position: relative;
+    top: 14.5rem;
+    ul {
+      text-align: left;
+      li {
+        padding:4.5rem 1rem 1rem 1rem;
+        height:15rem;
+        border-bottom:none;
+      }
+    }
+  }
+} /* min-width 960px, large screens */
