--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -79,8 +79,8 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-// $row-width: rem-calc(1000);
-// $total-columns: 12;
+$row-width: rem-calc(960);
+$total-columns: 12;
 // $column-gutter: rem-calc(30);
 
 // c. Global
@@ -220,18 +220,18 @@ $include-html-global-classes: $include-html-classes;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-// $h1-font-size: rem-calc(44);
-// $h2-font-size: rem-calc(37);
-// $h3-font-size: rem-calc(27);
-// $h4-font-size: rem-calc(23);
-// $h5-font-size: rem-calc(18);
+$h1-font-size: rem-calc(32);
+$h2-font-size: rem-calc(24);
+$h3-font-size: rem-calc(18);
+$h4-font-size: rem-calc(14);
+$h5-font-size: rem-calc(14);
 // $h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
-// $h1-font-reduction: rem-calc(10);
-// $h2-font-reduction: rem-calc(10);
-// $h3-font-reduction: rem-calc(5);
-// $h4-font-reduction: rem-calc(5);
+$h1-font-reduction: rem-calc(30);
+$h2-font-reduction: rem-calc(4);
+$h3-font-reduction: rem-calc(5);
+$h4-font-reduction: rem-calc(5);
 // $h5-font-reduction: 0;
 // $h6-font-reduction: 0;
 
